# AstraxEngine

./: CMakeLists.txt  LICENSE  README.md
include/: Astra.hpp
include/core/: Application.hpp  Mesh.hpp  Shader.hpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Astra.cpp
src/core/: Application.cpp  Mesh.cpp  Shader.cpp
src/graphics/: Graphics.cpp
